{
  "version": 4,
  "terraform_version": "1.16.2",
  "serial": 12,
  "lineage": "1aa24978-c344-8b26-9ebe-420b6fab43b1",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:093359840326:internet-gateway/igw-0ba177a2bd77a717e",
            "id": "igw-0ba177a2bd77a717e",
            "owner_id": "093359840326",
            "region": "eu-central-1",
            "tags": {
              "Name": "terraform-gateway"
            },
            "tags_all": {
              "Name": "terraform-gateway"
            },
            "vpc_id": "vpc-048727e1cf59f4873"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "093359840326",
            "id": "igw-0ba177a2bd77a717e",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:093359840326:route-table/rtb-044a9f3c67b2afd41",
            "id": "rtb-044a9f3c67b2afd41",
            "owner_id": "093359840326",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Name": "terraform-private-table"
            },
            "tags_all": {
              "Name": "terraform-private-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-048727e1cf59f4873"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "093359840326",
            "id": "rtb-044a9f3c67b2afd41",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:093359840326:route-table/rtb-0bac7acd63cfb6034",
            "id": "rtb-0bac7acd63cfb6034",
            "owner_id": "093359840326",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ba177a2bd77a717e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform-public-table"
            },
            "tags_all": {
              "Name": "terraform-public-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-048727e1cf59f4873"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "093359840326",
            "id": "rtb-0bac7acd63cfb6034",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4ea389ff516e16c",
            "region": "eu-central-1",
            "route_table_id": "rtb-044a9f3c67b2afd41",
            "subnet_id": "subnet-07f849bed8ee78c61"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "093359840326",
            "id": "rtbassoc-0d4ea389ff516e16c",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_1",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private2_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01598ebf4bfe3efba",
            "region": "eu-central-1",
            "route_table_id": "rtb-044a9f3c67b2afd41",
            "subnet_id": "subnet-0c9b53bf44d28c645"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "093359840326",
            "id": "rtbassoc-01598ebf4bfe3efba",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_route_table.private_route_table",
            "aws_subnet.private_subnet_2",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01a0f685df1c19c01",
            "region": "eu-central-1",
            "route_table_id": "rtb-0bac7acd63cfb6034",
            "subnet_id": "subnet-04a75846ed167dcf3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "093359840326",
            "id": "rtbassoc-01a0f685df1c19c01",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public_route_table",
            "aws_subnet.public_subnet",
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:093359840326:security-group/sg-01d1974856a7fd3e4",
            "description": "test sg for terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01d1974856a7fd3e4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-sg",
            "name_prefix": "",
            "owner_id": "093359840326",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-048727e1cf59f4873"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "093359840326",
            "id": "sg-01d1974856a7fd3e4",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:093359840326:subnet/subnet-07f849bed8ee78c61",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f849bed8ee78c61",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "093359840326",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "terraform-private1"
            },
            "tags_all": {
              "Name": "terraform-private1"
            },
            "vpc_id": "vpc-048727e1cf59f4873"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "093359840326",
            "id": "subnet-07f849bed8ee78c61",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:093359840326:subnet/subnet-0c9b53bf44d28c645",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.20.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c9b53bf44d28c645",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "093359840326",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "terraform-private2"
            },
            "tags_all": {
              "Name": "terraform-private2"
            },
            "vpc_id": "vpc-048727e1cf59f4873"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "093359840326",
            "id": "subnet-0c9b53bf44d28c645",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:093359840326:subnet/subnet-04a75846ed167dcf3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a75846ed167dcf3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "093359840326",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "terraform-public"
            },
            "tags_all": {
              "Name": "terraform-public"
            },
            "vpc_id": "vpc-048727e1cf59f4873"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "093359840326",
            "id": "subnet-04a75846ed167dcf3",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.terraform_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:093359840326:vpc/vpc-048727e1cf59f4873",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0b732299ea0d3e167",
            "default_route_table_id": "rtb-09c4e089c13812cc5",
            "default_security_group_id": "sg-054e641a41efe2783",
            "dhcp_options_id": "dopt-009033de78132a05c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-048727e1cf59f4873",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09c4e089c13812cc5",
            "owner_id": "093359840326",
            "region": "eu-central-1",
            "tags": {
              "Name": "terraform-vpc"
            },
            "tags_all": {
              "Name": "terraform-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "093359840326",
            "id": "vpc-048727e1cf59f4873",
            "region": "eu-central-1"
          }
        }
      ]
    }
  ]
}